--- a/work-like-elon-ui/src/app/home/home.component.html
+++ b/work-like-elon-ui/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid py-3">
+  <button class="btn btn-sm btn-outline-primary" (click)="open(demoModal)">Add Task</button>
     <div class="row my-3">
       <div class="col">
         <label for="exampleFormControlInput1" class="form-label">Email address</label>
@@ -21,7 +22,7 @@
     </div>
     <div class="row my-3">
       <div class="col">
-        <button class="btn btn-sm btn-outline-primary" (click)="open(demoModal)">Launch demo modal</button>
+        <!-- <button class="btn btn-sm btn-outline-primary" (click)="open(demoModal)">Launch demo modal</button> -->
       </div>
     </div>
   </div>
