--- a/work-like-elon-ui/src/app/quotes/quotes.component.html
+++ b/work-like-elon-ui/src/app/quotes/quotes.component.html
@@ -1,11 +1,11 @@
 <div class="container">
+    <input class="btn btn-outline-success rounded" type="button" value="Refresh" [disabled]="!this.quotes.length" (click)="generateRandomQuote()">
         <div class="">
             <img class="d-block w-100" src="../../assets/images/bg2.png" alt="First slide">
-            <div class="carousel-caption d-none d-md-block" style="margin-bottom: 130px;padding-right: 130px;">
+            <div class="carousel-caption d-none d-md-block" style="margin-bottom: 50px;padding-right: 130px;color: yellow;">
                 <p> <q>{{quoteText}}</q>
                 <cite style="display: block; text-align: right;"> - {{quoteAuthor}}</cite>
                 </p>
               </div>
           </div>
-      <input class="btn btn-outline-success rounded" type="button" value="Refresh" [disabled]="!this.quotes.length" (click)="generateRandomQuote()">
       </div> 
